SERVER-47166 Explicitly break Baton Promises outside of locks